--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "typecheck": "nuxt typecheck",
     "lint": "eslint --max-warnings 0 .",
     "fmt": "prettier --write .",
     "postinstall": "nuxt prepare"
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nuxt": "^3.7.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "vue-tsc": "^1.8.8"
   }
 }
