--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "engines": {
+    "node": "=18",
+    "pnpm": ">=8"
+  },
   "scripts": {
     "dev": "nuxt dev",
     "build": "nx exec -- nuxt build",
