--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "fmt": "nx exec -- prettier --write .",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "flowbite": "^1.8.1",
+    "nuxt": "^3.7.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.41.0",
-    "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/tailwindcss": "^6.8.0",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "flowbite": "^1.8.1",
-    "nuxt": "^3.7.0",
     "nx": "16.7.4",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
