feat(scripts): add fmt check, pre commit and pre commit check scripts

--- a/nx.json
+++ b/nx.json
@@ -3,7 +3,7 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "typecheck", "fmt"]
+        "cacheableOperations": ["build", "lint", "typecheck", "fmt", "fmtcheck"]
       }
     }
   },
