--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "typecheck": "nx exec -- nuxt typecheck",
     "lint": "nx exec -- eslint --max-warnings 0 .",
     "fmt": "nx exec -- prettier --write .",
+    "fmtcheck": "nx exec -- prettier --list-different .",
+    "precommit": "pnpm run fmt && pnpm run lint --fix",
+    "precommitcheck": "nx affected -t=fmtcheck,lint,typecheck,build --parallel=4",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
