--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "drizzle-kit": "^0.19.13",
     "drizzle-orm": "^0.28.6",
+    "ethers": "^6.7.1",
     "flowbite": "^1.8.1",
     "flowbite-vue": "0.0.17-next.6",
     "mysql2": "^3.6.1",
