--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ethers": "^6.7.1",
     "flowbite": "^1.8.1",
     "flowbite-vue": "0.0.17-next.6",
+    "jose": "^4.14.6",
     "mysql2": "^3.6.1",
     "nuxt": "^3.7.0",
     "nuxt-icon": "^0.5.0",
