--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "1.0.0-rc.2",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@trpc/client": "^10.38.3",
