feat(chore): update all dependencies

--- a/nx.json
+++ b/nx.json
@@ -3,7 +3,14 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "typecheck", "fmt", "fmtcheck"]
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "typecheck",
+          "fmt",
+          "fmtcheck",
+          "sync"
+        ]
       }
     }
   },
@@ -21,6 +28,9 @@
     },
     "lint": {
       "inputs": ["lint"]
+    },
+    "sync": {
+      "inputs": ["production", "^production"]
     }
   },
   "namedInputs": {
