--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "precommit": "pnpm run fmt && pnpm run lint --fix",
     "precommitcheck": "nx affected -t=fmtcheck,lint,typecheck,build --parallel=4",
     "migration": "nx exec -- drizzle-kit generate:mysql --schema=./server/database/schema.ts --out=./.migrations",
-    "postinstall": "pnpm run sync"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/devtools": "latest",
