--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fmt": "nx exec -- prettier --write .",
     "fmtcheck": "nx exec -- prettier --list-different .",
     "precommit": "pnpm run fmt && pnpm run lint --fix",
-    "precommitcheck": "nx affected -t=fmtcheck,lint,typecheck,build --parallel=4",
+    "precommitcheck": "nx run-many -t=fmtcheck,lint,typecheck,build --parallel=4",
     "migration": "nx exec -- drizzle-kit generate:mysql --schema=./server/database/schema.ts --out=./.migrations",
     "postinstall": "nuxt prepare"
   },
